# custom-asmr-srt-stack

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.codex/: config.toml
docs/: cli-product-decisions.md  local-asr-pipeline.md  product-decisions.md
src/custom_asmr_srt_stack/: __init__.py  alignment.py  audio.py  candidate_channel_audit.py  case_batch.py  case_slicing.py  case_transcription.py  channel_attribution.py  channel_reference_audit.py  channel_sweep.py  cli.py  cohere_asr_worker.py  evaluation.py  granite_asr_worker.py  local_asr.py  model_snapshot.py  models.py  pipeline_readiness.py  projects.py  qwen_aligner_worker.py  qwen_asr_worker.py  qwen_hf_asr_worker.py  reference_audit.py  review_effort.py  review_pack.py  server.py  srt.py  transcription.py  transformers_worker.py  translation.py  vad.py  whisper_vad_onnx.py  workflow.py
tests/: test_alignment.py  test_audio.py  test_cli_project.py  test_cohere_asr_worker.py  test_evaluation.py  test_granite_asr_worker.py  test_model_snapshot.py  test_models.py  test_projects.py  test_qwen_aligner_worker.py  test_qwen_asr_worker.py  test_qwen_hf_asr_worker.py  test_reference_audit.py  test_server.py  test_srt.py  test_transcription.py  test_transformers_worker.py  test_translation.py  test_vad.py  test_web_app.py  test_whisper_vad_onnx.py  test_workflow.py
web/: app.js  index.html  styles.css
